--- a/client/src/components/QuizEleve/question/question.css
+++ b/client/src/components/QuizEleve/question/question.css
@@ -1,6 +1,7 @@
-.Content h1 {
+.Answers h1 {
     margin: 15px 0;
     font-size: 25px;
+    font-size: 1.2em;
     font-family: Arial, sans-serif;
     color: #120c0c;
     text-transform: none;
@@ -8,3 +9,64 @@
     text-align: left;
 
 }
+.Answers {
+    list-style:none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    margin-top: 5px;
+    padding: 15px;
+    font-size: 1.2em;
+    box-sizing: border-box;
+    background-color: rgb(250, 250, 250);
+}
+.Answers li {
+    padding: 10px;
+    border-left: 4px solid #515352;
+    background-color: #bbb;
+    /*background-color: rgba(255,255,255,.5);*/
+    margin: 0 0 5px;
+   
+    border-radius: 5px;
+}
+.Answers input {
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid #FFF;
+    background-color: rgb(228, 225, 225);
+    width: 165px;
+    margin: 0 0 5px;
+    border-radius: 5px;
+    min-width:80%;
+}
+
+.Answers li:hover{
+    cursor: pointer;
+    background-color: #a2a2a2
+}
+
+.Answers li:active{
+    background-color: #494646
+}
+
+.Answers .correct, 
+.Answers .correct:hover{
+    background-color: #1db900;
+    border-left: 4px solid #0f6300;
+    color: #fff;
+}
+
+.Answers .incorrect, 
+.Answers .incorrect:hover{
+    background-color: #ec0000;
+    border-left: 4px solid #0f6300;
+    color: #fff;
+
+}
+
+.Answers[disabled]{
+    pointer-events: none;
+    opacity:0.7;
+}
+
