--- a/client/src/components/QuizEleve/QuizMain.css
+++ b/client/src/components/QuizEleve/QuizMain.css
@@ -1,82 +1,98 @@
 .container {
-    position: auto;
-    width: 1024px;
-    height: auto;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    padding: 10px;
-    box-sizing: border-box;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    margin: auto;
-  }
-  .Terminer {
-      background-color: #39b85d;
-      color: #fff;
-      padding: 10px 30px;
-      border: 0;
-      border-radius: 3px;
-      font-size: 1.2em;
-      text-align: center;
-      cursor: pointer;
-  }
-  .Terminer:hover{
-      background-color: #227439;
-  
-  }
-  
-  .title {
-    position: relative;
-    background-color: rgb(46, 182, 46);
-    color: rgb(255, 255, 255);
-    padding: 20px;
-    font-size: 1.8em;
-    border-radius: 5px;
-  }
-  
-  .question {
+  position: auto;
+  width: 1024px;
+  height: auto;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin: auto;
+}
+.Terminer {
+    background-color: #39b85d;
+    color: #fff;
+    padding: 10px 30px;
+    border: 0;
+    border-radius: 3px;
     font-size: 1.2em;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .questionBox {
-    position: relative;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    margin-top: 5px;
-    padding: 15px;
-    box-sizing: border-box;
-    background-color: rgb(250, 250, 250);
-  }
-  
-  .score-board {
-    position: relative;
-    height: 700px;
-  }
-  
-  .score {
-    position: absolute;
-    width: 1024px;
-    font-size: 3em;
-    top: 250px;
     text-align: center;
-  }
-  
-  .playBtn {
-    position: absolute;
-    font-size: 1.4em;
-    padding: 10px;
-    top: 350px;
-    background-color: rgb(46, 182, 46);
-    color: rgb(255, 255, 255);
-    width: 150px;
-    left: 0px;
-    right: 0px;
-    margin: auto;
-    outline: none;
     cursor: pointer;
-  }
-  
+    margin-right: 50px;
+}
+.Reset {
+  background-color: #39b85d;
+  color: #fff;
+  padding: 10px 30px;
+  border: 0;
+  border-radius: 3px;
+  font-size: 1.2em;
+  text-align: center;
+  cursor: pointer;
+  margin-left: 50px;
+}
+
+
+.title {
+  position: relative;
+  background-color: rgb(46, 182, 46);
+  color: rgb(255, 255, 255);
+  padding: 20px;
+  font-size: 1.2em;
+  border-radius: 5px;
+}
+
+.question {
+  font-size: 0.em;
+  font-weight: bold;
+  margin-bottom: 5px;
+  margin: auto;
+}
+
+.questionBox {
+  position: relative;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-top: 5px;
+  padding: 15px;
+  box-sizing: border-box;
+  margin: auto;
+  background-color: rgb(250, 250, 250);
+}
+
+.score-board {
+  position: relative;
+  height: 700px;
+}
+
+.score {
+  position: absolute;
+  width: 1024px;
+  font-size: 3em;
+  top: 250px;
+  text-align: center;
+}
+
+
+
+label.btn {
+  padding: 18px 60px;
+  white-space: normal;
+}
+
+
+label.btn-block {
+  text-align: left;
+  position: relative;
+}
+
+button {
+  box-shadow: 1px 1px 1px 1px black;
+}
+
+button:hover {
+  box-shadow: 2px 2px 8px 2px rgb(68, 68, 68);
+}
