[UPD] css and syntax

--- a/client/src/components/QuizEleve/QuizMain.css
+++ b/client/src/components/QuizEleve/QuizMain.css
@@ -39,7 +39,7 @@
 
 .title {
   position: relative;
-  background-color: rgb(46, 182, 46);
+  background-color:  #10812D ;
   color: rgb(255, 255, 255);
   padding: 20px;
   font-size: 1.2em;
